// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SolutionTypeIcon component tests should render correct image 1`] = `
.c0 {
  cursor: pointer;
}

.c1 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c1 * {
  height: inherit;
  width: inherit;
}

@media print {
  .c0 {
    display: none;
  }
}

<span
  alt="Workaround"
  class="c0 c1"
  data-testid="svg-icon"
  title="Workaround"
>
  <svg>
    st_workaround.svg
  </svg>
</span>
`;

exports[`SolutionTypeIcon component tests should render correct image 2`] = `<span />`;

exports[`SolutionTypeIcon component tests should render correct image 3`] = `
.c0 {
  cursor: pointer;
}

.c1 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c1 * {
  height: inherit;
  width: inherit;
}

@media print {
  .c0 {
    display: none;
  }
}

<span
  alt="None available"
  class="c0 c1"
  data-testid="svg-icon"
  title="None available"
>
  <svg>
    st_nonavailable.svg
  </svg>
</span>
`;

exports[`SolutionTypeIcon component tests should render correct image 4`] = `
.c0 {
  cursor: pointer;
}

.c1 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c1 * {
  height: inherit;
  width: inherit;
}

@media print {
  .c0 {
    display: none;
  }
}

<span
  alt="Vendorfix"
  class="c0 c1"
  data-testid="svg-icon"
  title="Vendorfix"
>
  <svg>
    st_vendorfix.svg
  </svg>
</span>
`;

exports[`SolutionTypeIcon component tests should render correct image 5`] = `
.c0 {
  cursor: pointer;
}

.c1 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c1 * {
  height: inherit;
  width: inherit;
}

@media print {
  .c0 {
    display: none;
  }
}

<span
  alt="Will not fix"
  class="c0 c1"
  data-testid="svg-icon"
  title="Will not fix"
>
  <svg>
    st_willnotfix.svg
  </svg>
</span>
`;

exports[`SolutionTypeIcon component tests should render correct image 6`] = `
.c0 {
  cursor: pointer;
}

.c1 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c1 * {
  height: inherit;
  width: inherit;
}

@media print {
  .c0 {
    display: none;
  }
}

<span
  alt="Workaround"
  class="c0 c1"
  data-testid="svg-icon"
  title="Workaround"
>
  <svg>
    st_workaround.svg
  </svg>
</span>
`;

exports[`SolutionTypeIcon component tests should render correct image 7`] = `
.c0 {
  cursor: pointer;
}

.c1 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c1 * {
  height: inherit;
  width: inherit;
}

@media print {
  .c0 {
    display: none;
  }
}

<span
  alt=""
  class="c0 c1"
  data-testid="svg-icon"
  title=""
>
  <svg>
    st_unknown.svg
  </svg>
</span>
`;

exports[`SolutionTypeIcon component tests should render correct image 8`] = `<span />`;
